# conduit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: index.md
docs/api/: breadboard.config.md  breadboard.dag.driver.md  conduit.config.md  conduit.dag.driver.md  conduit.formats.md  conduit.io.md  conduit.specs.md  conduit.transforms.md
docs/api/breadboard.cli/: cli.md  graph.md  index.md  run.md  version.md
docs/api/breadboard.dag/: node.md  resample.md
docs/api/conduit.cli/: cli.md  graph.md  index.md  run.md  version.md
docs/api/conduit.dag/: blocking.md  caching.md  contract_check.md  node.md  resample.md  wiring_check.md
docs/api/conduit.gridded/: cli.md  io.md  spatial.md
docs/api/satterc.cli/: graph.md
docs/concepts/: contracts.md  dag-model.md  scaling.md  why-conduit.md
docs/get-started/: first-pipeline.md  install.md  units-and-contracts.md
docs/getting_started/: concepts.md  contributing.md  installation.md  quickstart.md
docs/guides/: bring-your-own-module.md  drive-from-python.md  inline-nodes-and-fan-out.md  resampling-and-units.md  run-and-visualise.md  scale-up.md  validate-before-running.md
docs/models/: pmodel.md  rothc.md  sgam.md  splash.md
docs/recipes/: index.md
docs/reference/: configuration.md  data-formats.md  troubleshooting.md
docs/usage/: api.md  cli.md  config.md  custom-modules.md  data-formats.md  troubleshooting.md
examples/: config.toml  drive_from_python.py  full_pipeline.py  getting_started.py  graphviz.toml  my_first_pipeline.py  pft_parameters.py  soil_moisture.py  unit_safe_pipelines.py  units_and_contracts.py
src/breadboard/: __init__.py  _version.py  config.py  io.py  units.py
src/breadboard/cli/: __init__.py  create_store.py  graph.py  graph_style.py  version.py
src/breadboard/dag/: __init__.py  _utils.py  blocking.py  caching.py  driver.py  node.py  unit_check.py
src/conduit/: __init__.py  _version.py  checks.py  config.py  formats.py  io.py  spatial.py  specs.py  transforms.py  units.py
src/conduit/cli/: __init__.py  create_store.py  graph.py  graph_style.py  run.py  version.py
src/conduit/dag/: __init__.py  _hamilton_fixes.py  _utils.py  blocking.py  caching.py  contract_check.py  driver.py  (+4 more)
src/satterc/: __init__.py  config.py  io.py  units.py
tests/: _parallel_cache_spike_dag.py  conftest.py  synthetic_data.py  test_arbitrary_dims.py  test_blocking.py  test_caching.py  test_checks.py  test_cli.py  test_config.py  test_config.toml  test_config_gen.py  test_contract_check.py  test_dag_driver.py  test_dag_model_helpers.py  test_dag_node.py  test_disturbances_seam.py  test_dry_run.py  test_fallback.py  test_fanout.py  test_formats.py  test_freq.py  test_grid.py  test_hamilton_fixes.py  test_integration.py  test_io_extra.py  test_io_shapes.py  test_mapping.py  test_parallel_cache_spike.py  test_parallel_outputs.py  test_pmodel_seam.py  test_resample.py  test_rothc_seam.py  test_sgam_seam.py  test_single_point_io.py  test_splash_seam.py  test_subset.py  test_synthetic_data.py  test_unit_check.py  test_units.py  test_wiring.py
(+36 files in other folders)
