[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[project]
name = "conduit"
version = "0.1.0"
description = "A unit-safe, scalable foundation for building configurable xarray data pipelines and forward models."
authors = [
    { name = "jmarshrossney", email = "17361029+jmarshrossney@users.noreply.github.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "apache-hamilton>=1.90.0",
    "dask>=2025.1.0",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "pyarrow>=10.0",
    "tomli-w>=1.2.0",
    "typer>=0.24.1",
    "xarray>=2026.2.0",
    "xarray-annotated[cf] @ git+https://github.com/jmarshrossney/xarray-annotated.git",
    "zarr>=3.2.1",
]

[project.optional-dependencies]
viz = ["apache-hamilton[visualization]>=1.90.0"]
# Geospatial inputs (CRS-aware (y, x) -> pixel stacking and lat/lon reprojection).
# Only needed when inputs carry CRS metadata; imported lazily by conduit.io.
geo = ["pyproj>=3.7.2", "rioxarray>=0.22.0"]
all = ["conduit[viz,geo]"]

[project.scripts]
conduit = "conduit.cli:main"

[project.urls]
Homepage = "https://github.com/NERC-CEH/conduit"
Repository = "https://github.com/NERC-CEH/conduit"
Documentation = "https://github.com/NERC-CEH/conduit"

[dependency-groups]
dev = [
    {include-group = "docs"},
    {include-group = "test"},
    "pre-commit>=4.5.1",
    "pyright>=1.1.409",
    "ruff>=0.15.4",
    "rust-just>=1.46.0",
]
docs = [
    {include-group = "examples"},
    "conduit[viz]",
    "marimo>=0.23.0",
    "marimo-md-export>=0.5.2",
    "mkdocstrings-python>=2.0.3",
    "zensical>=0.0.24",
]
examples = [
    "matplotlib>=3.10.8",
]
test = [
    "conduit[viz,geo]",
    "coverage>=7.13.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.uv]
exclude-newer = "1 week"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src/", "tests/"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "D",   # pydocstyle
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "PT",  # flake8-pytest-style
    "I",   # isort
]

[tool.ruff.lint.per-file-ignores]
# Except tests and scripts from docstring requirements
"tests/**" = ["D", "E501"]
"scripts/**" = ["D"]
# Typer CLI modules use typer.Option() in function signatures as standard practice.
"src/conduit/cli/**" = ["B008"]
# Marimo notebooks use bare expressions for display output (B018),
# contain prose that naturally exceeds 88 chars (E501),
# include academic citations with en dashes (RUF001),
# may have unused variables from exploratory cells (F841),
# use scientific notation with Greek letters (RUF003),
# and are exploratory notebooks without module docstrings (D100, D401).
"examples/**" = ["B018", "E501", "F841", "RUF001", "RUF003", "D100", "D401", "F821"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
